<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amber_arm_commander</name>
  <version>0.0.0</version>
  <description>ROS2 Amber Arm Commander</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>Apache2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
