<?xml version="1.0"?>
<package format="3">
  <name>amber_b1_description</name>
  <version>1.0.0</version>
  <description>URDF and SDF description of Amber b1</description>
  <maintainer email="robinae@hotmail.se">Robin Fröjd</maintainer>
  <author>Robin Fröjd</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
