<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_trajectory_relay</name>
  <version>0.0.0</version>
  <description>Joint Trajectory Relay</description>
  <maintainer email="todo@todo.com">Todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
